force-app/main/default/objects/Budget_Premises__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Item__c</fullName>
        <label>Cost Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_for_School__c</fullName>
        <label>Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Premises</relationshipLabel>
        <relationshipName>Budget_Premises</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Budget - Premises</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Premises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>